--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "prettier": "2.2.1",
     "typescript": "4.1.5"
   },
+  "optionalDependencies": {
+    "fsevents": "2.3.2"
+  },
   "engines": {
     "node": ">=15.0.0",
     "npm": ">=7.0.0",
