--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "target": "ESNext",
+    "target": "ESNext"
     // "noImplicitAny": true
   },
   "include": ["./packages/**/src/**/*", "./starters/**/src/**/*"],
