--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "fix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
     "lerna": "lerna",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "generate-starters": "node ./scripts/generate-starters"
   },
   "devDependencies": {
     "@types/lodash": "4.14.168",
