--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   ],
   "scripts": {
     "fix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
+    "generate-starters": "node ./scripts/generate-starters",
     "lerna": "lerna",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "generate-starters": "node ./scripts/generate-starters"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
   },
   "devDependencies": {
     "@types/lodash": "4.14.168",
@@ -34,13 +34,12 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
+    "fs-extra": "8.1.0",
+    "fsevents": "2.3.2",
     "identity-obj-proxy": "3.0.0",
     "lerna": "3.22.1",
     "prettier": "2.2.1",
     "typescript": "4.1.5"
-  },
-  "optionalDependencies": {
-    "fsevents": "2.3.2"
   },
   "engines": {
     "node": ">=15.0.0",
