--- a/examples/chronoblog-netlify-cms/package.json
+++ b/examples/chronoblog-netlify-cms/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "gatsby": "^2.23.3",
+    "gatsby-plugin-disqus": "^1.1.4",
     "gatsby-plugin-google-analytics": "^2.1.23",
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-netlify": "^2.1.17",
