--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
     "generate-starters": "node ./scripts/generate-starters",
     "lerna": "lerna",
+    "publish": "node ./scripts/generate-starters && lerna publish",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "fs-extra": "8.1.0",
     "fsevents": "2.3.2",
     "identity-obj-proxy": "3.0.0",
-    "lerna": "3.22.1",
+    "lerna": "4.0.0",
     "prettier": "2.2.1",
     "typescript": "4.1.5"
   },
