--- a/lerna.json
+++ b/lerna.json
@@ -1,17 +1,8 @@
 {
   "version": "independent",
   "npmClient": "npm",
-  "useWorkspaces": false,
-  "loglevel": "success",
   "registry": "https://registry.npmjs.org/",
-  "ignoreChanges": [
-    "CHANGELOG.md",
-    "**/__tests__/**",
-    "**/__mocks__/**",
-    "examples/**",
-    "starters/**",
-    "test-builds/**"
-  ],
+  "ignoreChanges": ["CHANGELOG.md", "**/__tests__/**", "**/__mocks__/**"],
   "command": {
     "publish": {
       "allowBranch": "master",
