--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "generate-starters": "node ./scripts/generate-starters",
     "lerna": "lerna",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "version": "node ./scripts/generate-starters && lerna version --no-changelog",
     "publish:major": "node ./scripts/generate-starters && lerna publish major --no-changelog",
     "publish:minor": "node ./scripts/generate-starters && lerna publish minor --no-changelog",
-    "publish:patch": "node ./scripts/generate-starters && lerna publish patch --no-changelog"
+    "publish:patch": "node ./scripts/generate-starters && lerna publish patch --no-changelog",
+    "publish:premajor": "node ./scripts/generate-starters && lerna publish premajor --no-changelog",
+    "publish:preminor": "node ./scripts/generate-starters && lerna publish preminor --no-changelog",
+    "publish:prepatch": "node ./scripts/generate-starters && lerna publish prepatch --no-changelog"
   },
   "devDependencies": {
     "@types/lodash": "4.14.168",
