--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,6 +9,15 @@ jobs:
       matrix:
         node_version: [12, 13, 14, 15]
         os: [ubuntu-latest, macos-latest, windows-latest]
+        starter:
+          [
+            starters/chronoblog,
+            starters/hacker,
+            starters/profile,
+            test-builds/content-tests,
+            test-builds/chinese-language-test,
+            test-builds/profile-minimal,
+          ]
     steps:
       - uses: actions/checkout@v1
 
@@ -21,21 +30,5 @@ jobs:
         run: npm i -f
 
         # test starters
-      - name: cd starters/chronoblog && npm run build
-        run: cd starters/chronoblog && npm run build
-
-      - name: cd starters/hacker && npm run build
-        run: cd starters/hacker && npm run build
-
-      - name: cd starters/profile && npm run build
-        run: cd starters/profile && npm run build
-
-        # test tests builds
-      - name: cd test-builds/content-tests && npm run build
-        run: cd test-builds/content-tests && npm run build
-
-      - name: cd test-builds/chinese-language-test && npm run build
-        run: cd test-builds/chinese-language-test && npm run build
-
-      - name: cd test-builds/profile-minimal && npm run build
-        run: cd test-builds/profile-minimal && npm run build
+      - name: cd ${{ matrix.starter }} && npm run build
+        run: cd ${{ matrix.starter }} && npm run build
