--- a/.github/workflows/publication.yml
+++ b/.github/workflows/publication.yml
@@ -6,16 +6,14 @@ jobs:
   copy-file:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Pushes test folder
-        uses: crykn/copy_folder_to_another_repo_action@v1.0.6
+      - name: Push directory to another repository
+        uses: cpina/github-action-push-to-another-repository@v1.2
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
-          source_folder: "examples/chronoblog-netlify-cms"
-          destination_repo: "Chronoblog/gatsby-starter-chronoblog-netlify-cms"
-          user_email: "8168280+Ganevru@users.noreply.github.com"
-          user_name: "Ivan Ganev"
-          commit_msg: "Auto update chronoblog-netlify-cms example"
+          source-directory: "examples/chronoblog-netlify-cms"
+          destination-github-username: "Chronoblog"
+          destination-repository-name: "gatsby-starter-chronoblog-netlify-cms"
+          user-email: 8168280+Ganevru@users.noreply.github.com
+      - name: Test get variable exported by push-to-another-repository
+        run: echo $DESTINATION_CLONED_DIRECTORY
