--- a/.github/workflows/publication.yml
+++ b/.github/workflows/publication.yml
@@ -10,8 +10,8 @@ jobs:
         uses: andstor/copycat-action@v3
         with:
           personal_token: ${{ secrets.API_TOKEN_GITHUB }}
-          src_path: examples/chronoblog-netlify-cms
-          dst_path: /
+          src_path: examples/chronoblog-netlify-cms/*
+          dst_path: /.
           clean: true
           dst_owner: Chronoblog
           dst_repo_name: gatsby-starter-chronoblog-netlify-cms
