--- a/.github/workflows/publication.yml
+++ b/.github/workflows/publication.yml
@@ -10,7 +10,7 @@ jobs:
         uses: andstor/copycat-action@v3
         with:
           personal_token: ${{ secrets.API_TOKEN_GITHUB }}
-          src_path: examples/chronoblog-netlify-cms/*
+          src_path: examples/chronoblog-netlify-cms/.
           dst_path: /.
           clean: true
           dst_owner: Chronoblog
