--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,14 +3,15 @@ on: [push]
 jobs:
   tests:
     timeout-minutes: 220
-    name: Test ${{ matrix.starter }} on node ${{ matrix.node_version }} and ${{ matrix.os }}
+    name: Test ${{ matrix.starter_folder }} on node ${{ matrix.node_version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         node_version: [15]
         os: [ubuntu-latest, macos-latest, windows-latest]
-        starter:
+        starter_folder:
           [
+            examples/chronoblog-netlify-cms,
             starters/chronoblog,
             starters/hacker,
             starters/profile,
@@ -29,6 +30,5 @@ jobs:
       - name: npm i -f
         run: npm i -f
 
-        # test starters
-      - name: cd ${{ matrix.starter }} && npm run build
-        run: cd ${{ matrix.starter }} && npm run build
+      - name: cd ${{ matrix.starter_folder }} && npm run build
+        run: cd ${{ matrix.starter_folder }} && npm run build
