upd versions of starters, add gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,16 @@ README-DEV.md
 # no lock
 yarn.lock
 package-lock.json
+
+#
+examples/
+!examples/README.md
+!examples/*/package.json
+#
+starters/
+!starters/README.md
+!starters/*/package.json
+#
+test-builds/
+!test-builds/README.md
+!test-builds/*/package.json
