--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,9 +27,10 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
 
+      - name: npm i -f
+        run: npm i -f
       - name: npm run generate-starters
         run: npm run generate-starters
-
       - name: npm i -f
         run: npm i -f
 
