--- a/.github/workflows/new-version.yml
+++ b/.github/workflows/new-version.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: npm i -f
         run: npm i -f
+      - name: npm run generate-starters
+        run: npm run generate-starters
 
       - name: cd ${{ matrix.starter_folder }} && npm run build
         run: cd ${{ matrix.starter_folder }} && npm run build
@@ -59,6 +61,10 @@ jobs:
             },
           ]
     steps:
+      - name: npm i -f
+        run: npm i -f
+      - name: npm run generate-starters
+        run: npm run generate-starters
       - name: Copy directory ${{ matrix.starter.folder }} to ${{ matrix.starter.repo }} repository
         uses: andstor/copycat-action@v3
         with:
