--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,6 @@
 {
   "version": "independent",
   "npmClient": "npm",
-  "useWorkspaces": true,
   "registry": "https://registry.npmjs.org/",
   "ignoreChanges": ["CHANGELOG.md", "**/__tests__/**", "**/__mocks__/**"],
   "command": {
@@ -16,5 +15,6 @@
     "bootstrap": {
       "npmClientArgs": ["--no-package-lock"]
     }
-  }
+  },
+  "packages": ["packages/*"]
 }
