--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,6 +31,8 @@ jobs:
         run: npm i -f
       - name: npm run generate-starters
         run: npm run generate-starters
+      - name: npm i
+        run: npm i
 
       - name: cd ${{ matrix.starter_folder }} && npm run build
         run: cd ${{ matrix.starter_folder }} && npm run build
