--- a/.github/workflows/new-version.yml
+++ b/.github/workflows/new-version.yml
@@ -36,8 +36,8 @@ jobs:
         run: npm i -f
       - name: npm run generate-starters
         run: npm run generate-starters
-      - name: npm i
-        run: npm i
+      - name: npm i -f
+        run: npm i -f
 
       - name: cd ${{ matrix.starter_folder }} && npm run build
         run: cd ${{ matrix.starter_folder }} && npm run build
@@ -67,8 +67,8 @@ jobs:
         run: npm i -f
       - name: npm run generate-starters
         run: npm run generate-starters
-      - name: npm i
-        run: npm i
+      - name: npm i -f
+        run: npm i -f
 
       - name: Copy directory starters/${{ matrix.starter }}/. to gatsby-starter-${{ matrix.starter }} repository
         uses: andstor/copycat-action@v3
@@ -91,8 +91,8 @@ jobs:
         run: npm i -f
       - name: npm run generate-starters
         run: npm run generate-starters
-      - name: npm i
-        run: npm i
+      - name: npm i -f
+        run: npm i -f
 
       - name: Copy directory examples/${{ matrix.example }}/. to gatsby-starter-${{ matrix.example }} repository
         uses: andstor/copycat-action@v3
