--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "version:prepatch": "lerna version prepatch"
   },
   "devDependencies": {
+    "@types/jest": "26.0.20",
     "@types/lodash": "4.14.168",
     "@types/node": "14.14.31",
     "@types/react": "16.14.4",
