--- a/.github/workflows/new-version.yml
+++ b/.github/workflows/new-version.yml
@@ -33,15 +33,10 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
 
-      - name: npm i -f
-        run: npm i -f
-      - name: npm run generate-starters
-        run: npm run generate-starters
-      - name: npm i -f
-        run: npm i -f
-
-      - name: cd ${{ matrix.starter_folder }} && npm run build
-        run: cd ${{ matrix.starter_folder }} && npm run build
+      - run: npm i -f
+      - run: npm run generate-starters
+      - run: npm i -f
+      - run: cd ${{ matrix.starter_folder }} && npm run build
 
   publish-npm:
     needs: [tests]
@@ -64,10 +59,12 @@ jobs:
       matrix:
         starter: [chronoblog, chronoblog-hacker, chronoblog-profile]
     steps:
-      - name: npm i -f
-        run: npm i -f
-      - name: npm run generate-starters
-        run: npm run generate-starters
+      - uses: actions/checkout@v2.3.4
+      - uses: actions/setup-node@v2.1.5
+        with:
+          node-version: 15
+      - run: npm i -f
+      - run: npm run generate-starters
 
       - name: Copy directory starters/${{ matrix.starter }}/. to gatsby-starter-${{ matrix.starter }} repository
         uses: andstor/copycat-action@v3
@@ -86,10 +83,12 @@ jobs:
       matrix:
         example: [chronoblog-netlify-cms]
     steps:
-      - name: npm i -f
-        run: npm i -f
-      - name: npm run generate-starters
-        run: npm run generate-starters
+      - uses: actions/checkout@v2.3.4
+      - uses: actions/setup-node@v2.1.5
+        with:
+          node-version: 15
+      - run: npm i -f
+      - run: npm run generate-starters
 
       - name: Copy directory examples/${{ matrix.example }}/. to gatsby-starter-${{ matrix.example }} repository
         uses: andstor/copycat-action@v3
