--- a/.github/workflows/publish-examples.yml
+++ b/.github/workflows/publish-examples.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 15
 
-      - run: npm i
+      - run: npm i --unsafe-perm=true
       - run: npm run generate-starters
 
       - name: Copy directory examples/${{ matrix.example }}/. to gatsby-starter-${{ matrix.example }} repository
