--- a/.github/workflows/publish-examples.yml
+++ b/.github/workflows/publish-examples.yml
@@ -10,10 +10,10 @@ jobs:
       matrix:
         example: [chronoblog-netlify-cms]
     steps:
+      - uses: actions/checkout@v2.3.4
       - uses: actions/setup-node@v2.1.5
         with:
           node-version: 15
-
       - run: npm i
       - run: npm run generate-starters
 
