--- a/package.json
+++ b/package.json
@@ -14,16 +14,8 @@
     "clean:chronoblog": "cd starters/chronoblog && npm run clean",
     "fix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
     "generate-starters": "node ./scripts/generate-starters",
-    "lerna": "lerna",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "start:chronoblog": "npm run generate-starters && cd starters/chronoblog && npm run start",
-    "version": "lerna version",
-    "version:major": "lerna version major",
-    "version:minor": "lerna version minor",
-    "version:patch": "lerna version patch",
-    "version:premajor": "lerna version premajor",
-    "version:preminor": "lerna version preminor",
-    "version:prepatch": "lerna version prepatch"
+    "start:chronoblog": "npm run generate-starters && cd starters/chronoblog && npm run start"
   },
   "devDependencies": {
     "@types/jest": "26.0.20",
@@ -46,7 +38,6 @@
     "eslint-plugin-simple-import-sort": "7.0.0",
     "fs-extra": "8.1.0",
     "identity-obj-proxy": "3.0.0",
-    "lerna": "4.0.0",
     "prettier": "2.2.1",
     "typescript": "4.1.5"
   },
