--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,9 @@ yarn.lock
 package-lock.json
 
 # starters folder
-starters/*
-!starters/.gitkeep
+starters
+# starters/*
+# !starters/.gitkeep
+examples
 # examples/*
 # !examples/.gitkeep
