--- a/examples/chronoblog-netlify-cms/.gitignore
+++ b/examples/chronoblog-netlify-cms/.gitignore
@@ -69,8 +69,6 @@ package-lock.json
 starters
 # starters/*
 # !starters/.gitkeep
-# examples
-examples/*
-!examples/.gitkeep
-!examples/chronoblog-netlify-cms
-!examples/chronoblog-netlify-cms/.gitkeep
+examples
+# examples/*
+# !examples/.gitkeep
